# 2dGame

./: CMakeLists.txt  Makefile  premake5.lua
cmake/: CMakeLists.txt  Dependencies.cmake  MyGame
include/: Entity.hpp  Game.hpp  GameTimer.hpp  Globals.hpp  Math.hpp  Player.hpp  Pokemon.hpp  Renderer.hpp  Sprite.hpp  Texture.hpp  Time.hpp
include/Math/: Trigo.hpp  Vector.hpp
src/: Entity.cpp  Game.cpp  GameTimer.cpp  Globals.cpp  Player.cpp  Pokemon.cpp  Renderer.cpp  Sprite.cpp  Texture.cpp  Time.cpp  main.cpp
